Loades dataset and divided into subsets, classified with one-hot encoding.

--- a/GuillermoBN_DogBreedIdentifier.ipynb
+++ b/GuillermoBN_DogBreedIdentifier.ipynb
@@ -46,21 +46,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AVwF_fM3kJ0P",
-        "outputId": "1de5dd01-8b12-4a5d-9bb5-1f52b01529bd"
+        "outputId": "e22add81-2542-418e-f2fb-61a2879ac991"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'DogBreedsDataRepo'...\n",
-            "remote: Enumerating objects: 20496, done.\u001b[K\n",
-            "remote: Counting objects: 100% (20496/20496), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (20496/20496), done.\u001b[K\n",
-            "remote: Total 20496 (delta 0), reused 20496 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (20496/20496), 684.99 MiB | 37.04 MiB/s, done.\n",
-            "Updating files: 100% (20581/20581), done.\n",
+            "fatal: destination path 'DogBreedsDataRepo' already exists and is not an empty directory.\n",
             "/content/DogBreedsDataRepo\n"
           ]
         }
@@ -77,13 +71,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1,
       "metadata": {
         "id": "KRd-O-7dWiC1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "724a9a08-e8b0-48bd-cab4-28868d7faa14"
+        "outputId": "1cf2b086-c69a-47ff-96a6-7e39a4f102d5"
       },
       "outputs": [
         {
@@ -121,7 +115,7 @@
     {
       "cell_type": "code",
       "source": [
-        "labels_df = pd.read_csv(\"labels.csv\")\n",
+        "labels_df = pd.read_csv(\"/content/DogBreedsDataRepo/labels.csv\")\n",
         "\n",
         "id_col    = [c for c in labels_df.columns if c.lower() in (\"id\",\"image_id\",\"label\",\"image\")][0]\n",
         "breed_col = [c for c in labels_df.columns if \"breed\" in c.lower()][0]\n",
@@ -136,9 +130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rvxKHXGQoHtE",
-        "outputId": "e0183716-e85e-4985-fdfd-89ee4f26e50c"
+        "outputId": "d68ab8f2-07ad-462b-c0db-4a15deb0b35f"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +174,7 @@
       "metadata": {
         "id": "nc14G2pQp8kf"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -209,9 +203,9 @@
           "height": 206
         },
         "id": "KsnJjWpzoMkM",
-        "outputId": "deea3974-b553-44de-d48d-a01ac6fae6fe"
+        "outputId": "d09a3eaf-5031-42a7-96b8-4be96a47f736"
       },
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,7 +227,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cc8454ed-9db0-44ed-ab53-e7e4c07cabac\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9e060a34-eda4-486e-8554-36c6ca268324\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -294,7 +288,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cc8454ed-9db0-44ed-ab53-e7e4c07cabac')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9e060a34-eda4-486e-8554-36c6ca268324')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -346,12 +340,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-cc8454ed-9db0-44ed-ab53-e7e4c07cabac button.colab-df-convert');\n",
+              "        document.querySelector('#df-9e060a34-eda4-486e-8554-36c6ca268324 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-cc8454ed-9db0-44ed-ab53-e7e4c07cabac');\n",
+              "        const element = document.querySelector('#df-9e060a34-eda4-486e-8554-36c6ca268324');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -371,8 +365,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-e4b3adc8-5c05-4b17-8903-d8e08f112865\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e4b3adc8-5c05-4b17-8903-d8e08f112865')\"\n",
+              "    <div id=\"df-a62847a8-85a5-4355-b814-59423a4ee3ae\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a62847a8-85a5-4355-b814-59423a4ee3ae')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -491,7 +485,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-e4b3adc8-5c05-4b17-8903-d8e08f112865 button');\n",
+              "            document.querySelector('#df-a62847a8-85a5-4355-b814-59423a4ee3ae button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -508,7 +502,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 8
         }
       ]
     },
@@ -524,8 +518,9 @@
     {
       "cell_type": "code",
       "source": [
-        "num_classes = df['breed'].nunique()\n",
-        "print(\"Nº of detected breeds:\", num_classes)\n",
+        "classes = df['breed'].unique()\n",
+        "NUM_CLASSES = len(classes)\n",
+        "print(\"Nº of detected breeds:\", NUM_CLASSES)\n",
         "counts = df['breed'].value_counts()\n",
         "print(f\"Breed with the most images: {counts.idxmax()} with {counts.max()}\")\n",
         "print(f\"Breed with the least images: {counts.idxmin()} with {counts.min()}\")"
@@ -535,9 +530,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ca5IoJP5CuyJ",
-        "outputId": "0cddf4f9-7aec-4a05-f790-89c3e0bc2dab"
+        "outputId": "06c0a5f4-8254-4cc3-9fd4-02db24665976"
       },
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,10 +560,10 @@
         "\n",
         "SEED = 42\n",
         "\n",
-        "# Primero separamos test (15%)\n",
+        "# Separate testing set (15%)\n",
         "train_val_df, test_df = train_test_split(df, test_size=0.15, stratify=df[\"breed\"], random_state=SEED)\n",
         "\n",
-        "# Ahora de lo que queda (85%) sacamos el 15% global para validación.\n",
+        "# Separate a global 15% for validate set from the 85% remaining\n",
         "\n",
         "val_rel = 0.15 / 0.85\n",
         "\n",
@@ -581,9 +576,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XgBQlmnFQrlx",
-        "outputId": "fbe65d5f-3c19-4165-8632-2cdece04e819"
+        "outputId": "d5d5fe6a-220d-4269-bfd5-1adf8d63e4be"
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,9 +618,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jwhaPMEET8NY",
-        "outputId": "c5a2147c-14e8-4786-d332-e29401fa0503"
+        "outputId": "baa7b863-f392-4f3c-aa12-3ba6b08647e1"
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,7 +670,7 @@
       "cell_type": "code",
       "source": [
         "IMG_SIZE   = (224, 224)   # width, height\n",
-        "NUM_CLASSES = len(breeds)\n",
+        "\n",
         "\n",
         "def load_images(paths, img_size=IMG_SIZE):\n",
         "    imgs = []\n",
@@ -688,7 +683,7 @@
       "metadata": {
         "id": "g-wxHAOkUAqb"
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -709,7 +704,7 @@
         "x_test  = load_images(test_df['path'].tolist())\n",
         "\n",
         "# Convert label(str) into indexes\n",
-        "label2idx = {breed:idx for idx, breed in enumerate(breeds)}\n",
+        "label2idx = {breed:idx for idx, breed in enumerate(classes)}\n",
         "y_train_idx = train_df['breed'].map(label2idx).values\n",
         "y_val_idx   = val_df['breed'].map(label2idx).values\n",
         "y_test_idx  = test_df['breed'].map(label2idx).values\n"
@@ -717,8 +712,17 @@
       "metadata": {
         "id": "gR3kCd867QDD"
       },
-      "execution_count": 19,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Transform output values dataset to categorical classes using one-hot encoding"
+      ],
+      "metadata": {
+        "id": "ZqPOhCdVHo20"
+      }
     },
     {
       "cell_type": "code",
@@ -731,24 +735,25 @@
         "# Check shapes\n",
         "print(\"x_train:\", x_train.shape, \"y_train:\", y_train.shape)\n",
         "print(\"x_val:  \", x_val.shape,   \"y_val:  \", y_val.shape)\n",
-        "print(\"x_test: \", x_test.shape,  \"y_test: \", y_test.shape)\n"
+        "print(\"x_test: \", x_test.shape,  \"y_test: \", y_test.shape)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-WbkGCN37ziO",
-        "outputId": "f2a58b0c-821f-418c-a450-0753215671fe"
+        "outputId": "8dcc5019-3c09-4e97-98dd-9f2f452078d1"
       },
-      "execution_count": 32,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "x_train: (7154, 224, 224, 3) y_train: (7154, 10222)\n",
-            "x_val:   (1534, 224, 224, 3) y_val:   (1534, 10222)\n",
-            "x_test:  (1534, 224, 224, 3) y_test:  (1534, 10222)\n"
+            "x_train: (7154, 224, 224, 3) y_train: (7154, 120)\n",
+            "x_val:   (1534, 224, 224, 3) y_val:   (1534, 120)\n",
+            "x_test:  (1534, 224, 224, 3) y_test:  (1534, 120)\n"
           ]
         }
       ]
